feat: 日志聚类接入重构与新交互开发 --story=126602975

--- a/bklog/web/src/static/demo.html
+++ b/bklog/web/src/static/demo.html
@@ -161,6 +161,10 @@
           <span class="icon bklog-icon bklog-eye-slash"></span>
           <p class="icon-text">eye-slash</p>
         </li>
+        <li class="icon-item" title="dimens">
+          <span class="icon bklog-icon bklog-dimens"></span>
+          <p class="icon-text">dimens</p>
+        </li>
         <li class="icon-item" title="email-shape">
           <span class="icon bklog-icon bklog-email-shape"></span>
           <p class="icon-text">email-shape</p>
@@ -588,6 +592,10 @@
         <li class="icon-item" title="jump">
           <span class="icon bklog-icon bklog-jump"></span>
           <p class="icon-text">jump</p>
+        </li>
+        <li class="icon-item" title="organization">
+          <span class="icon bklog-icon bklog-organization"></span>
+          <p class="icon-text">organization</p>
         </li>
         <li class="icon-item" title="overview-table">
           <span class="icon bklog-icon bklog-overview-table"></span>
@@ -1045,6 +1053,14 @@
           <span class="icon bklog-icon bklog-fllatend"></span>
           <p class="icon-text">fllatend</p>
         </li>
+        <li class="icon-item" title="tuzenggaojing">
+          <span class="icon bklog-icon bklog-tuzenggaojing"></span>
+          <p class="icon-text">tuzenggaojing</p>
+        </li>
+        <li class="icon-item" title="xinleigaojing">
+          <span class="icon bklog-icon bklog-xinleigaojing"></span>
+          <p class="icon-text">xinleigaojing</p>
+        </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
       <ul class="use-describe">
@@ -1127,6 +1143,12 @@
             <use xlink:href="#bklog-eye-slash"></use>
           </svg>
           <p class="icon-text">eye-slash</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-dimens"></use>
+          </svg>
+          <p class="icon-text">dimens</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
@@ -1769,6 +1791,12 @@
             <use xlink:href="#bklog-jump"></use>
           </svg>
           <p class="icon-text">jump</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-organization"></use>
+          </svg>
+          <p class="icon-text">organization</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
@@ -2453,6 +2481,18 @@
             <use xlink:href="#bklog-fllatend"></use>
           </svg>
           <p class="icon-text">fllatend</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-tuzenggaojing"></use>
+          </svg>
+          <p class="icon-text">tuzenggaojing</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-xinleigaojing"></use>
+          </svg>
+          <p class="icon-text">xinleigaojing</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
