fix: 日志聚类测试问题修复 --Bug=146994949 # Reviewed, transaction id: 54842

--- a/bklog/web/src/static/demo.html
+++ b/bklog/web/src/static/demo.html
@@ -1061,6 +1061,38 @@
           <span class="icon bklog-icon bklog-xinleigaojing"></span>
           <p class="icon-text">xinleigaojing</p>
         </li>
+        <li class="icon-item" title="enter-2">
+          <span class="icon bklog-icon bklog-enter-2"></span>
+          <p class="icon-text">enter-2</p>
+        </li>
+        <li class="icon-item" title="fengefu">
+          <span class="icon bklog-icon bklog-fengefu"></span>
+          <p class="icon-text">fengefu</p>
+        </li>
+        <li class="icon-item" title="json-fanxuliehua">
+          <span class="icon bklog-icon bklog-json-fanxuliehua"></span>
+          <p class="icon-text">json-fanxuliehua</p>
+        </li>
+        <li class="icon-item" title="zhengzetiqu">
+          <span class="icon bklog-icon bklog-zhengzetiqu"></span>
+          <p class="icon-text">zhengzetiqu</p>
+        </li>
+        <li class="icon-item" title="weiguishu">
+          <span class="icon bklog-icon bklog-weiguishu"></span>
+          <p class="icon-text">weiguishu</p>
+        </li>
+        <li class="icon-item" title="all2">
+          <span class="icon bklog-icon bklog-all2"></span>
+          <p class="icon-text">all2</p>
+        </li>
+        <li class="icon-item" title="sousuo-">
+          <span class="icon bklog-icon bklog-sousuo-"></span>
+          <p class="icon-text">sousuo-</p>
+        </li>
+        <li class="icon-item" title="sousuo-">
+          <span class="icon bklog-icon bklog-sousuo-"></span>
+          <p class="icon-text">sousuo-</p>
+        </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
       <ul class="use-describe">
@@ -2493,6 +2525,54 @@
             <use xlink:href="#bklog-xinleigaojing"></use>
           </svg>
           <p class="icon-text">xinleigaojing</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-enter-2"></use>
+          </svg>
+          <p class="icon-text">enter-2</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-fengefu"></use>
+          </svg>
+          <p class="icon-text">fengefu</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-json-fanxuliehua"></use>
+          </svg>
+          <p class="icon-text">json-fanxuliehua</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-zhengzetiqu"></use>
+          </svg>
+          <p class="icon-text">zhengzetiqu</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-weiguishu"></use>
+          </svg>
+          <p class="icon-text">weiguishu</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-all2"></use>
+          </svg>
+          <p class="icon-text">all2</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-sousuo-"></use>
+          </svg>
+          <p class="icon-text">sousuo-</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-sousuo-"></use>
+          </svg>
+          <p class="icon-text">sousuo-</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
