--- a/bklog/web/src/static/demo.html
+++ b/bklog/web/src/static/demo.html
@@ -1101,6 +1101,10 @@
           <span class="icon bklog-icon bklog-group"></span>
           <p class="icon-text">group</p>
         </li>
+        <li class="icon-item" title="caijixiafazhong">
+          <span class="icon bklog-icon bklog-caijixiafazhong"></span>
+          <p class="icon-text">caijixiafazhong</p>
+        </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
       <ul class="use-describe">
@@ -2593,6 +2597,12 @@
             <use xlink:href="#bklog-group"></use>
           </svg>
           <p class="icon-text">group</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-caijixiafazhong"></use>
+          </svg>
+          <p class="icon-text">caijixiafazhong</p>
         </li>
       </ul>
       <h3 class="describe-title">为什么使用</h3>
