feat: 日志管理 - 采集接入重构-接口联调

--- a/bklog/web/src/static/demo.html
+++ b/bklog/web/src/static/demo.html
@@ -549,6 +549,10 @@
           <span class="icon bklog-icon bklog-log-remark"></span>
           <p class="icon-text">log-remark</p>
         </li>
+        <li class="icon-item" title="alert">
+          <span class="icon bklog-icon bklog-alert"></span>
+          <p class="icon-text">alert</p>
+        </li>
         <li class="icon-item" title="back2">
           <span class="icon bklog-icon bklog-back2"></span>
           <p class="icon-text">back2</p>
@@ -1769,6 +1773,12 @@
             <use xlink:href="#bklog-log-remark"></use>
           </svg>
           <p class="icon-text">log-remark</p>
+        </li>
+        <li class="colorful-icon">
+          <svg class="icon svg-icon">
+            <use xlink:href="#bklog-alert"></use>
+          </svg>
+          <p class="icon-text">alert</p>
         </li>
         <li class="colorful-icon">
           <svg class="icon svg-icon">
